# cs-unittest

./: README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: Build_Doc.yml  main.yml
docs/: conf.py  index.rst  text.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
poetry_unittest/: function.py
tests/: test.py
